Ticket #27483: Add math functions to TL-Script via reflection.
- create MathFunctions class with ScriptPrefix "math"
- implement usefull functions from java.lang.math
- functions are SideEffectFree except random
- add test suite covering all math functions

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -563,6 +563,145 @@ com.top_logic.model.search.expr.config.operations.LengthBuilder = Länge Baumeist
 com.top_logic.model.search.expr.config.operations.LengthBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Längenausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.ListBuilder = Listenersteller
 com.top_logic.model.search.expr.config.operations.ListBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Listenausdrücken</i>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder = IEEE 754 Restbetrag
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.param.f1.tooltip = Die Dividende (die zu teilende Zahl).
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.param.f2.tooltip = Der Divisor (die Zahl, die <code>f1</code> teilt).
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.return = Der IEEE-754-Standard besteht aus den Resten <code>f1</code> und <code>f2</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.tooltip = Gibt den Rest von zwei Gleitkomma-Argumenten zurück, wie es der IEEE 754-Standard vorschreibt.
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs = Absoluter Wert einer Zahl
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs.param.a.tooltip = Der Wert, dessen Absolutwert ermittelt werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs.return = Der absolute Wert des Arguments.
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs.tooltip = Gibt den Absolutwert eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos = Arcus-Cosinus-Funktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos.param.a.tooltip = Der Wert, dessen Arcuskosinus zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos.return = Der Bogenkosinus des Arguments in Bogenmaß. Der zurückgegebene Winkel liegt im Bereich von <code>0.0</code> bis <code>pi</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos.tooltip = Gibt den Arcuskosinus eines Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin = Arcus-Sinus-Funktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin.param.a.tooltip = Der Wert, dessen Arcussinus zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin.return = Der Arcussinus des Arguments in Radiant. Der zurückgegebene Winkel liegt im Bereich von <code>-pi/2</code> bis <code>pi/2</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin.tooltip = Gibt den Arcussinus eines Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan = Bogen-Tangens-Funktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan.param.a.tooltip = Der Wert, dessen Arcustangens zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan.return = Der Arcustangens des Arguments in Radiant. Der zurückgegebene Winkel liegt im Bereich von <code>-pi/2</code> bis <code>pi/2</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan.tooltip = Gibt den Arcustangens eines Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2 = Arcustangens von y/x
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.param.x.tooltip = Die Abszissenkoordinate.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.param.y.tooltip = Die Ordinatenkoordinate.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.return = Die Theta-Komponente des Punktes (r, Theta) in Polarkoordinaten.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.tooltip = Konvertiert rechtwinklige Koordinaten (x, y) in Polarkoordinaten (r, theta).
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt = Würfelwurzel
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt.param.a.tooltip = Der Wert, dessen Kubikwurzel zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt.return = Die Kubikwurzel aus <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt.tooltip = Gibt die Kubikwurzel eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign = Zeichen kopieren
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.param.magnitude.tooltip = Bestimmt den absoluten Wert (oder die Größe) des Ergebnisses.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.param.sign.tooltip = Bestimmt das Vorzeichen (positiv oder negativ) des Ergebnisses.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.return = Der Wert von <code>magnitude</code> mit dem Vorzeichen von <code>sign</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.tooltip = Gibt das erste Gleitkomma-Argument mit dem Vorzeichen des zweiten Gleitkomma-Arguments zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos = Kosinus-Funktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos.param.a.tooltip = Der Winkel in Radiant.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos.return = Der Kosinus des Winkels.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos.tooltip = Gibt den trigonometrischen Kosinus eines Winkels zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh = Hyperbolischer Kosinus
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh.param.x.tooltip = Die Zahl, deren hyperbolischer Kosinus zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh.return = Der hyperbolische Kosinus von <code>x</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh.tooltip = Gibt den hyperbolischen Kosinus eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.e = Wert von e
+com.top_logic.model.search.expr.config.operations.MathFuncions.e.return = Der Wert von e (2.718281828459045).
+com.top_logic.model.search.expr.config.operations.MathFuncions.e.tooltip = Gibt den Wert von e zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp = Exponentialfunktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp.param.a.tooltip = Der Exponent, auf den e erhöht wird.
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp.return = Der Wert <code>e^a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp.tooltip = Gibt die Eulersche Zahl e hochgezählt als Double-Wert zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1 = Exponential minus eins
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1.param.x.tooltip = Der Exponent, auf den e erhöht wird.
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1.return = Der Wert <code>e^x - 1</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1.tooltip = Gibt die Eulersche Zahl e hochgezählt als Potenz eines Double-Wertes minus 1 zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent = Binären Exponenten erhalten
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent.param.d.tooltip = Der Doppelwert, dessen unverzerrter Exponent zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent.return = Der unverzerrte Exponent des Arguments
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent.tooltip = Gibt den unverzerrten Exponenten zurück, der bei der Darstellung eines Double verwendet wird.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot = Euklidischer Abstand
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.param.x.tooltip = Der erste Wert.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.param.y.tooltip = Der zweite Wert.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.return = Der euklidische Abstand <code>sqrt(x^2 + y^2)</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.tooltip = Gibt die positive Differenz zwischen zwei Argumenten zurück (euklidischer Abstand).
+com.top_logic.model.search.expr.config.operations.MathFuncions.log = Natürlicher Logarithmus
+com.top_logic.model.search.expr.config.operations.MathFuncions.log.param.a.tooltip = Der Wert, dessen natürlicher Logarithmus zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log.return = Der natürliche Logarithmus von <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log.tooltip = Gibt den natürlichen Logarithmus (Basis e) eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10 = Logarithmus zur Basis 10
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10.param.a.tooltip = Der Wert, dessen Logarithmus zur Basis 10 zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10.return = Der Logarithmus zur Basis 10 von <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10.tooltip = Gibt den Logarithmus zur Basis 10 eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p = Natürlicher Logarithmus von x + 1
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p.param.x.tooltip = Der Wert, zu dem 1 addiert wird.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p.return = Der Wert <code>ln(x + 1)</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p.tooltip = Gibt den natürlichen Logarithmus der Summe aus dem Argument und 1 zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter = Nächste Gleitkommazahl
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.param.direction.tooltip = Der Wert, der die Richtung angibt.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.param.start.tooltip = Der Anfangswert der Fließkommazahl.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.return = Der angrenzende Fließkommawert.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.tooltip = Gibt den nächsten Gleitkommawert zurück, der dem ersten Argument in Richtung des zweiten Arguments benachbart ist.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown = Nächster Wert gegen negative Unendlichkeit
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown.param.d.tooltip = Der Anfangswert der Fließkommazahl.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown.return = Der angrenzende Fließkommawert geht gegen negativ unendlich.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown.tooltip = Gibt den Fließkommawert zurück, der an das Argument in der Richtung von negativ unendlich angrenzt.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp = Nächster Wert gegen positive Unendlichkeit
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp.param.d.tooltip = Der Anfangswert der Fließkommazahl.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp.return = Der benachbarte Fließkommawert gegen positive Unendlichkeit.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp.tooltip = Gibt den Fließkommawert zurück, der in Richtung der positiven Unendlichkeit an das Argument angrenzt.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pi = Wert von pi
+com.top_logic.model.search.expr.config.operations.MathFuncions.pi.return = Der Wert von pi (3,141592653589793).
+com.top_logic.model.search.expr.config.operations.MathFuncions.pi.tooltip = Gibt den Wert von pi zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow = Funktion Leistung
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.param.a.tooltip = Die Basis.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.param.b.tooltip = Der Exponent.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.return = Der Wert <code>a^b</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.tooltip = Gibt den Wert des ersten Arguments hochgezählt in der Potenz des zweiten Arguments zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.random = Zufällig
+com.top_logic.model.search.expr.config.operations.MathFuncions.random.return = Ein Pseudo-Zufallswert, der größer oder gleich <code>0.0</code> und kleiner als <code>1.0</code> ist.
+com.top_logic.model.search.expr.config.operations.MathFuncions.random.tooltip = Gibt einen Double-Wert mit positivem Vorzeichen zurück, der größer als oder gleich <code>0.0</code> und kleiner als <code>1.0</code> ist.
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint = Runden auf die nächste Ganzzahl
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint.param.a.tooltip = Der zu rundende Wert.
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint.return = Der dem Argument am nächsten liegende Double-Wert, der einer mathematischen Ganzzahl entspricht.
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint.tooltip = Gibt den Double-Wert zurück, der dem Argument am nächsten kommt und gleich einer mathematischen Ganzzahl ist.
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum = Signum-Funktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum.param.d.tooltip = Der Wert, dessen Vorzeichen zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum.return = Die Signum-Funktion des Arguments.
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum.tooltip = Gibt die Vorzeichenfunktion des Arguments zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin = Sinusfunktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin.param.a.tooltip = Der Winkel in Radiant.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin.return = Der Sinus des Winkels.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin.tooltip = Gibt den trigonometrischen Sinus eines Winkels zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh = Hyperbolischer Sinus
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh.param.x.tooltip = Die Zahl, deren hyperbolischer Sinus zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh.return = Der hyperbolische Sinus von <code>x</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh.tooltip = Gibt den hyperbolischen Sinus eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt = Quadratwurzel
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt.param.a.tooltip = Der Wert, dessen Quadratwurzel bestimmt werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt.return = Die positive Quadratwurzel aus <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt.tooltip = Gibt die korrekt gerundete positive Quadratwurzel eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan = Tangensfunktion
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan.param.a.tooltip = Der Winkel in Radiant.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan.return = Der Tangens des Winkels.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan.tooltip = Gibt den trigonometrischen Tangens eines Winkels zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh = Hyperbolischer Tangens
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh.param.x.tooltip = Die Zahl, deren hyperbolischer Tangens zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh.return = Der hyperbolische Tangens von <code>x</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh.tooltip = Gibt den hyperbolischen Tangens eines Double-Wertes zurück.
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees = Radiant in Grad umrechnen
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees.param.angrad.tooltip = Ein Winkel in Radiant
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees.return = Das Maß für den Winkel <code>angrad</code> in Grad
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees.tooltip = Konvertiert einen im Bogenmaß gemessenen Winkel in einen annähernd äquivalenten, in Grad gemessenen Winkel. Die Umrechnung von Bogenmaß in Grad ist im Allgemeinen ungenau.
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians = Grad in Radiant umrechnen
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians.param.angdeg.tooltip = Ein Winkel, in Grad
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians.return = Das Maß des Winkels <code>angdeg</code> Bogenmaß.
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians.tooltip = Konvertiert einen in Grad gemessenen Winkel in einen annähernd äquivalenten, in Bogenmaß gemessenen Winkel. Die Umrechnung von Grad in Bogenmaß ist im Allgemeinen ungenau.
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp = Einheit der geringsten Präzision
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp.param.d.tooltip = Der Wert, dessen ulp zurückgegeben werden soll.
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp.return = Die Größe eines ulp des Arguments.
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp.tooltip = Gibt die ulp-Größe des Arguments zurück. Ein ulp, Einheit in der letzten Stelle, eines Double-Wertes ist der positive Abstand zwischen diesem Fließkommawert und dem nächstgrößeren Double-Wert in der Größenordnung.
 com.top_logic.model.search.expr.config.operations.RecursionBuilder = Erbauer der Rekursion
 com.top_logic.model.search.expr.config.operations.RecursionBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Rekursionsausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.ReferersBuilder = Referenten-Bauer
