--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -563,6 +563,145 @@ com.top_logic.model.search.expr.config.operations.LengthBuilder = Length builder
 com.top_logic.model.search.expr.config.operations.LengthBuilder.tooltip = <i>Method builder</i> creating <i>length</i> expressions.
 com.top_logic.model.search.expr.config.operations.ListBuilder = List builder
 com.top_logic.model.search.expr.config.operations.ListBuilder.tooltip = <i>Method builder</i> creating <i>list expression</i> expressions.
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder = IEEE 754 Remainder
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.param.f1.tooltip = The dividend (the number being divided).
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.param.f2.tooltip = The divisor (the number dividing <code>f1</code>}).
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.return = The IEEE 754 standard remainder of <code>f1</code> and <code>f2</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.IEEEremainder.tooltip = Returns the remainder of two floating-point arguments as prescribed by the IEEE 754 standard.
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs = Absolute value of a number
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs.param.a.tooltip = The value whose absolute value is to be determined.
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs.return = The absolute value of the argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.abs.tooltip = Returns the absolute value of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos = Arc cosine function
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos.param.a.tooltip = The value whose arc cosine is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos.return = The arc cosine of the argument in radians. The returned angle is in the range <code>0.0</code> through <code>pi</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.acos.tooltip = Returns the arc cosine of a value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin = Arc sine function
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin.param.a.tooltip = The value whose arc sine is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin.return = The arc sine of the argument in radians. The returned angle is in the range <code>-pi/2</code> through <code>pi/2</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.asin.tooltip = Returns the arc sine of a value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan = Arc tangent function
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan.param.a.tooltip = The value whose arc tangent is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan.return = The arc tangent of the argument in radians. The returned angle is in the range <code>-pi/2</code> through <code>pi/2</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan.tooltip = Returns the arc tangent of a value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2 = Arc tangent of y/x
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.param.x.tooltip = The abscissa coordinate.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.param.y.tooltip = The ordinate coordinate.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.return = The theta component of the point (r, theta) in polar coordinates.
+com.top_logic.model.search.expr.config.operations.MathFuncions.atan2.tooltip = Converts rectangular coordinates (x, y) to polar (r, theta).
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt = Cube root
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt.param.a.tooltip = The value whose cube root is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt.return = The cube root of <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cbrt.tooltip = Returns the cube root of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign = Copy Sign
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.param.magnitude.tooltip = Determines the absolute value (or magnitude) of the result.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.param.sign.tooltip = Determines the sign (positive or negative) of the result.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.return = The value of <code>magnitude</code> with the sign of <code>sign</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.copySign.tooltip = Returns the first floating-point argument with the sign of the second floating-point argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos = Cosine function
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos.param.a.tooltip = The angle in radians.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos.return = The cosine of the angle.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cos.tooltip = Returns the trigonometric cosine of an angle.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh = Hyperbolic cosine
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh.param.x.tooltip = The number whose hyperbolic cosine is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh.return = The hyperbolic cosine of <code>x</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.cosh.tooltip = Returns the hyperbolic cosine of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.e = Value of e
+com.top_logic.model.search.expr.config.operations.MathFuncions.e.return = The value of e (2.718281828459045).
+com.top_logic.model.search.expr.config.operations.MathFuncions.e.tooltip = Returns the value of e.
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp = Exponential function
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp.param.a.tooltip = The exponent to raise e to.
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp.return = The value <code>e^a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.exp.tooltip = Returns Euler's number e raised to the power of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1 = Exponential minus one
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1.param.x.tooltip = The exponent to raise e to.
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1.return = The value <code>e^x - 1</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.expm1.tooltip = Returns Euler's number e raised to the power of a double value minus 1.
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent = Get Binary Exponent
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent.param.d.tooltip = The double value whose unbiased exponent is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent.return = The unbiased exponent of the argument
+com.top_logic.model.search.expr.config.operations.MathFuncions.getExponent.tooltip = Returns the unbiased exponent used in the representation of a double.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot = Euclidean distance
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.param.x.tooltip = The first value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.param.y.tooltip = The second value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.return = The Euclidean distance <code>sqrt(x^2 + y^2)</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.hypot.tooltip = Returns the positive difference between two arguments (Euclidean distance).
+com.top_logic.model.search.expr.config.operations.MathFuncions.log = Natural logarithm
+com.top_logic.model.search.expr.config.operations.MathFuncions.log.param.a.tooltip = The value whose natural logarithm is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log.return = The natural logarithm of <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log.tooltip = Returns the natural logarithm (base e) of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10 = Base 10 logarithm
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10.param.a.tooltip = The value whose base 10 logarithm is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10.return = The base 10 logarithm of <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log10.tooltip = Returns the base 10 logarithm of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p = Natural logarithm of x + 1
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p.param.x.tooltip = The value to add 1 to.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p.return = The value <code>ln(x + 1)</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.log1p.tooltip = Returns the natural logarithm of the sum of the argument and 1.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter = Next floating-point value
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.param.direction.tooltip = The value indicating the direction.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.param.start.tooltip = The starting floating-point value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.return = The adjacent floating-point value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextAfter.tooltip = Returns the next floating-point value adjacent to the first argument in the direction of the second argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown = Next value toward negative infinity
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown.param.d.tooltip = The starting floating-point value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown.return = The adjacent floating-point value toward negative infinity.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextDown.tooltip = Returns the floating-point value adjacent to the argument in the direction of negative infinity.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp = Next value toward positive infinity
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp.param.d.tooltip = The starting floating-point value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp.return = The adjacent floating-point value toward positive infinity.
+com.top_logic.model.search.expr.config.operations.MathFuncions.nextUp.tooltip = Returns the floating-point value adjacent to the argument in the direction of positive infinity.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pi = Value of pi
+com.top_logic.model.search.expr.config.operations.MathFuncions.pi.return = The value of pi (3.141592653589793).
+com.top_logic.model.search.expr.config.operations.MathFuncions.pi.tooltip = Returns the value of pi.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow = Power function
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.param.a.tooltip = The base.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.param.b.tooltip = The exponent.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.return = The value <code>a^b</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.pow.tooltip = Returns the value of the first argument raised to the power of the second argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.random = Random
+com.top_logic.model.search.expr.config.operations.MathFuncions.random.return = A pseudorandom double greater than or equal to <code>0.0</code> and less than <code>1.0</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.random.tooltip = Returns a double value with a positive sign, greater than or equal to <code>0.0</code> and less than <code>1.0</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint = Round to nearest integer
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint.param.a.tooltip = The value to be rounded.
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint.return = The closest double value to the argument that is equal to a mathematical integer.
+com.top_logic.model.search.expr.config.operations.MathFuncions.rint.tooltip = Returns the double value that is closest in value to the argument and is equal to a mathematical integer.
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum = Signum function
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum.param.d.tooltip = The value whose signum is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum.return = The signum function of the argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.signum.tooltip = Returns the signum function of the argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin = Sine function
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin.param.a.tooltip = The angle in radians.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin.return = The sine of the angle.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sin.tooltip = Returns the trigonometric sine of an angle.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh = Hyperbolic sine
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh.param.x.tooltip = The number whose hyperbolic sine is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh.return = The hyperbolic sine of <code>x</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sinh.tooltip = Returns the hyperbolic sine of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt = Square root
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt.param.a.tooltip = The value whose square root is to be determined.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt.return = The positive square root of <code>a</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.sqrt.tooltip = Returns the correctly rounded positive square root of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan = Tangent function
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan.param.a.tooltip = The angle in radians.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan.return = The tangent of the angle.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tan.tooltip = Returns the trigonometric tangent of an angle.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh = Hyperbolic tangent
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh.param.x.tooltip = The number whose hyperbolic tangent is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh.return = The hyperbolic tangent of <code>x</code>.
+com.top_logic.model.search.expr.config.operations.MathFuncions.tanh.tooltip = Returns the hyperbolic tangent of a double value.
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees = Convert Radians to Degrees
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees.param.angrad.tooltip = An angle, in radians
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees.return = The measurement of the angle <code>angrad</code> in degrees
+com.top_logic.model.search.expr.config.operations.MathFuncions.toDegrees.tooltip = Converts an angle measured in radians to an approximatelyequivalent angle measured in degrees. The conversion from radians to degrees is generally inexact.
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians = Convert Degrees to Radians
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians.param.angdeg.tooltip = An angle, in degrees
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians.return = The measurement of the angle <code>angdeg</code> radians.
+com.top_logic.model.search.expr.config.operations.MathFuncions.toRadians.tooltip = Converts an angle measured in degrees to an approximatelyequivalent angle measured in radians. The conversion from degrees to radians is generally inexact.
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp = Unit of least precision
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp.param.d.tooltip = The value whose ulp is to be returned.
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp.return = The size of an ulp of the argument.
+com.top_logic.model.search.expr.config.operations.MathFuncions.ulp.tooltip = Returns the ulp size of the argument. An ulp, unit in the last place, of a double value is the positive distance between this floating-point value and the double value next larger in magnitude.
 com.top_logic.model.search.expr.config.operations.RecursionBuilder = Recursion builder
 com.top_logic.model.search.expr.config.operations.RecursionBuilder.tooltip = <i>Method builder</i> creating <i>recursion</i> expressions.
 com.top_logic.model.search.expr.config.operations.ReferersBuilder = Referers builder
